--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Assignments"></activity>
+        <activity android:name=".Goals" />
+        <activity android:name=".Assignments" />
         <activity android:name=".subjectsOptions" />
         <activity android:name=".Subjects" />
         <activity android:name=".Profile" />
@@ -29,9 +30,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".notification_popUp"
-            android:theme="@style/AppTheme.notificationPopup" />
 
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
