--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".EnrolmentRecord"></activity>
+        <activity android:name=".Calendar" />
         <activity
             android:name=".statistics"
             android:label="@string/title_activity_statistics"
