--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
     implementation 'com.muditsen.multilevelrecyclerview:multilevelview:1.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
