--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -29,6 +29,9 @@
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".Assignments"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".page"
             android:windowSoftInputMode="adjustNothing" />
         <activity android:name=".subjectGoals" />
         <activity android:name=".subjectsOptions" />
