--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,10 @@ dependencies {
 
     implementation 'mobi.seus.jena:jena-android-arq:2.13.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'joda-time:joda-time:2.10.2'
 
     implementation 'com.google.code.gson:gson:2.8.5'
+
 }
 
 configurations {
