fixed login bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".calendarInfo"></activity>
-        <activity android:name=".AssignmentInfo" />
-        <activity android:name=".EnrolmentRecord" />
-        <activity android:name=".CalendarSelect" />
+        <activity android:name=".calendarInfo" android:windowSoftInputMode="adjustNothing"></activity>
+        <activity android:name=".AssignmentInfo" android:windowSoftInputMode="adjustNothing" />
+        <activity android:name=".EnrolmentRecord" android:windowSoftInputMode="adjustNothing" />
+        <activity android:name=".CalendarSelect" android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".statistics"
             android:label="@string/title_activity_statistics"
@@ -53,7 +53,8 @@
         <activity android:name=".CreateAccount" />
         <activity
             android:name=".LoginPage"
-            android:theme="@style/AppTheme.NoActionbar">
+            android:theme="@style/AppTheme.NoActionbar"
+            android:windowSoftInputMode="adjustNothing" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
